[tool.poetry]
name = "ReNATS"
version = "0.2.1-alpha"
description = ""
authors = ["Respirens <thesergiyprotsanin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
msgspec = "^0.15.1"
typing-extensions = "^4.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
