[tool.poetry]
name = "ReNATS"
version = "0.2.2-alpha-2"
description = ""
authors = ["Respirens <thesergiyprotsanin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.6.3"
uuid6 = "^2023.5.2"
msgspec = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
